# clob

./: .gitignore  PRODUCT.md  README.md
clob/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GCP_DEPLOYMENT.md  README.md  config.toml  docker-compose.yml
clob/crates/benchmark-client/: Cargo.toml  Dockerfile
clob/crates/benchmark-client/src/: main.rs
clob/crates/common-types/: Cargo.toml
clob/crates/common-types/src/: lib.rs
clob/crates/configuration/: Cargo.toml
clob/crates/configuration/src/: lib.rs
clob/crates/execution-plane/: Cargo.toml
clob/crates/execution-plane/src/: lib.rs  main.rs  user_management.rs
clob/crates/ingress-verifier/: Cargo.toml  Dockerfile
clob/crates/ingress-verifier/src/: main.rs
clob/crates/market-matcher/: Cargo.toml  Dockerfile
clob/crates/market-matcher-gateway/: Cargo.toml  Dockerfile
clob/crates/market-matcher-gateway/src/: main.rs
clob/crates/market-matcher/src/: main.rs
clob/crates/matching-engine/: Cargo.toml
clob/crates/matching-engine/benches/: orderbook_bench.rs
clob/crates/matching-engine/src/: lib.rs
clob/crates/settlement-plane/: Cargo.toml  Dockerfile
clob/crates/settlement-plane/src/: lib.rs  main.rs  merkle.rs
clob/crates/verifier/: Cargo.toml  Dockerfile
clob/crates/verifier/src/: lib.rs  main.rs
clob/crates/verifier/tests/: integration_test.rs
scripts/: run_benchmark.sh  run_ingress_verifier.sh  run_market_matcher.sh  run_market_matcher_gateway.sh  run_redis.sh  setup_ingress_verifier.sh  setup_market_matcher.sh  setup_settlement_plane.sh
