[workspace]
resolver = "2"
members = [
    "crates/common-types",
    "crates/matching-engine",
    "crates/settlement-plane",
    "crates/verifier",
    "crates/ingress-verifier",
    "crates/market-matcher",
    "crates/configuration",
    "crates/benchmark-client",
]

[workspace.dependencies]
ed25519-dalek = { version = "2.1", features = ["serde"] }