[package]
name = "benchmark-client"
version = "0.1.0"
edition = "2021"

[dependencies]
common-types = { path = "../common-types" }
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
ed25519-dalek = { workspace = true }
rand = "0.8"
hex = "0.4"
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
