[package]
name = "benchmark-client"
version = "0.1.0"
edition = "2021"

[dependencies]
common-types = { path = "../common-types" }
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
ed25519-dalek = { workspace = true }
rand = "0.8"
hex = "0.4"
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.25", default-features = false, features = ["tokio-comp"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
dashmap = "6.1.0"
hdrhistogram = "7.5.4"
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-webpki-roots"] }
url = "2.5"
