[package]
name = "execution-plane"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "execution-plane"
path = "src/main.rs"

[dependencies]
common-types = { path = "../common-types" }
matching-engine = { path = "../matching-engine" }
configuration = { path = "../configuration" }
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { workspace = true }
bincode = "1.3"
rand = "0.8"
dashmap = "5.5"
rust_decimal = { version = "1.35", features = ["serde-str"] }
rust_decimal_macros = "1.35"
hex = "0.4"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
