[package]
name = "ingress-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
common-types = { path = "../common-types" }
configuration = { path = "../configuration" }
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
ed25519-dalek = { workspace = true }
thiserror = "1.0"
hex = "0.4"
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.5"
rand = "0.8"
warp = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
rust_decimal = "1.35"
serde_json = "1.0"