[package]
name = "market-matcher-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "market-matcher-gateway"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"
redis = { version = "0.25", features = ["tokio-comp"] }
configuration = { path = "../configuration" }
common-types = { path = "../common-types" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1.3"
bytes = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-stream = "0.3"
tokio-stream = "0.1"
base64 = "0.22"

