[package]
name = "market-matcher"
version = "0.1.0"
edition = "2021"

[dependencies]
common-types = { path = "../common-types" }
matching-engine = { path = "../matching-engine" }
configuration = { path = "../configuration" }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
redis = { version = "0.25", features = ["tokio-comp"] }
bincode = "1.3"
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
config = { version = "0.14", features = ["toml"] }
ed25519-dalek = { workspace = true }
rust_decimal = "1.35"
