[package]
name = "settlement-plane"
version = "0.1.0"
edition = "2021"

[dependencies]
common-types = { path = "../common-types" }
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
