[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
common-types = { path = "../common-types" }
matching-engine = { path = "../matching-engine" }
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
serde_json = "1.0"
dashmap = "5.5"
sha2 = "0.10"
hex = "0.4"
rust_decimal = "1.35"
serde = { version = "1.0", features = ["derive"] }