[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "verifier"
path = "src/main.rs"

[dependencies]
common-types = { path = "../common-types" }
matching-engine = { path = "../matching-engine" }
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
serde_json = "1.0"
dashmap = "5.5"
sha2 = "0.10"
hex = "0.4"
rust_decimal = "1.35"
serde = { version = "1.0", features = ["derive"] }
rust_decimal_macros = "1.35"
configuration = { path = "../configuration" }
thiserror = "1.0"
redis = { version = "0.25", features = ["tokio-comp"] }

[dev-dependencies]
ingress-verifier = { path = "../ingress-verifier" }
market-matcher = { path = "../market-matcher" }
settlement-plane = { path = "../settlement-plane" }
ed25519-dalek = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
redis-test = "0.2"
